Added generating table rows in loop for all person elements

--- a/XML/XML_DOM_tableView.html
+++ b/XML/XML_DOM_tableView.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script  language="JavaScript" type="text/javascript" src="XML_DOM_parser.js"></script>
+    <script src="XML_DOM_parser.js">
+    </script>
     <style>
         table, th, td {
             border: 1px solid black;
@@ -11,7 +12,7 @@
     </style>
 </head>
 <body onload = "getPersonList()">
-<table id="personlist">
+<table id="personlistTable">
     <tr>
         <th>Imie</th>
         <th>Nazwisko</th>
